<resources>
    <string name="app_name">RDV Manager</string>
    <string name="btn_date">Pick Date</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnSave">Save</string>
    <string name="lblPerson">Person</string>
    <string name="lblTitle">Title</string>
    <string name="TvNoItems">No items</string>
    <string name="lblPhone">Phone</string>
    <string name="lblDate">Date</string>
    <string name="pckDate">Pick Date</string>
    <string name="lblTime">Time</string>
    <string name="pckTime">Pick Time</string>
    <string name="delete">Delete</string>
    <string name="stateDone">Done</string>
    <string name="stateNotDone">Not Done</string>"
</resources>